--- a/ghost/email-service/lib/email-templates/partials/paywall.hbs
+++ b/ghost/email-service/lib/email-templates/partials/paywall.hbs
@@ -2,9 +2,9 @@
     <hr
         style="position: relative; display: block; width: 100%; margin: 3em 0; padding: 0; height: 1px; border: 0; border-top: 1px solid #e5eff5;">
     <h2
-        style="margin-top: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; line-height: 1.11em; font-weight: 700; text-rendering: optimizeLegibility; margin: 1.5em 0 0.5em 0; font-size: 26px!important;">
+        style="margin-top: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; line-height: 1.11em; font-weight: 700; text-rendering: optimizeLegibility; margin: 1.5em 0 0.5em 0; font-size: 26px!important; text-wrap: pretty;">
         {{t 'Upgrade to continue reading.'}}</h2>
-    <p style="margin: 0 auto 1.5em auto; line-height: 1.6em; max-width: 440px;">{{t 'Become a paid member of {site} to get access to all premium content.' site=site.title}}</p>
+    <p style="margin: 0 auto 1.5em auto; line-height: 1.6em; max-width: 440px; text-wrap: pretty;">{{t 'Become a paid member of {site} to get access to all premium content.' site=site.title}}</p>
     <div class="btn btn-accent" style="box-sizing: border-box; width: 100%; display: table;">
         <table border="0" cellspacing="0" cellpadding="0" align="center" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
             <tbody>
