--- a/ghost/admin/app/components/stats/technical-overview.hbs
+++ b/ghost/admin/app/components/stats/technical-overview.hbs
@@ -27,5 +27,6 @@
         @source={{@source}}
         @pathname={{@pathname}}
         @selected={{this.selected}}
+        @mockData={{@mockData}}
     />
 </div>
