--- a/ghost/admin/app/templates/stats.hbs
+++ b/ghost/admin/app/templates/stats.hbs
@@ -2,6 +2,14 @@
     <GhCanvasHeader class="gh-canvas-header gh-stats-header sticky break tablet post-header">
         <GhCustomViewTitle @title="Stats" />
         <div class="view-actions">
+            <button 
+                class="gh-btn {{if this.mockData "gh-btn-green"}}" 
+                data-test-button="toggle-data-mode" 
+                {{on "click" this.toggleMockData}}
+            >
+                <span>{{if this.mockData "Using Test Data" "Using Live Data"}}</span>
+            </button>
+
             <Stats::Parts::AudienceFilter
                 @excludedAudiences={{this.excludedAudiences}}
                 @onChange={{this.onAudienceChange}}
@@ -73,6 +81,7 @@
                 @source={{this.source}}
                 @pathname={{this.pathname}}
                 @os={{this.os}}
+                @mockData={{this.mockData}}
             />
         </section>
 
@@ -87,6 +96,7 @@
                     @source={{this.source}}
                     @pathname={{this.pathname}}
                     @os={{this.os}}
+                    @mockData={{this.mockData}}
                 />
             </div>
             <div class="gh-stats-container">
@@ -99,6 +109,7 @@
                     @source={{this.source}}
                     @pathname={{this.pathname}}
                     @os={{this.os}}
+                    @mockData={{this.mockData}}
                 />
             </div>
         </section>
@@ -114,6 +125,7 @@
                     @source={{this.source}}
                     @pathname={{this.pathname}}
                     @os={{this.os}}
+                    @mockData={{this.mockData}}
                 />
             </div>
             <div class="gh-stats-container">
@@ -126,6 +138,7 @@
                         @source={{this.source}}
                         @pathname={{this.pathname}}
                         @os={{this.os}}
+                        @mockData={{this.mockData}}
                     />
             </div>
         </section>
