--- a/ghost/email-service/lib/email-templates/partials/paywall.hbs
+++ b/ghost/email-service/lib/email-templates/partials/paywall.hbs
@@ -1,6 +1,6 @@
 <div class="align-center" style="text-align: center;">
     <hr
-        style="position: relative; display: block; width: 100%; margin: 3em 0; padding: 0; height: 1px; border: 0; border-top: 1px solid #e5eff5;">
+        style="position: relative; display: block; width: 100%; margin: 3em 0; padding: 0; height: 1px; border: 0; border-top: 1px solid #e0e7eb;">
     <h3
         style="margin-top: 0; font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif; line-height: 1.11em; font-weight: 700; text-rendering: optimizeLegibility; margin: 1.5em 0 0.5em 0; text-wrap: pretty;">
         {{t 'Upgrade to continue reading.'}}</h3>
