--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -81,8 +81,9 @@ hr {
     margin: 3em 0;
     padding: 0;
     height: 1px;
+    background-color: transparent;
     border: 0;
-    border-top: 1px solid #e5eff5;
+    border-top: 1px solid #e0e7eb;
 }
 
 p,
@@ -171,7 +172,7 @@ blockquote.kg-blockquote-alt {
     text-align: center;
     font-size: 1.2em;
     font-style: italic;
-    color: #738a94;
+    color: #73818c;
 }
 
 blockquote p {
@@ -277,7 +278,7 @@ figcaption {
     padding-top: 10px;
     padding-bottom: 10px;
     line-height: 1.5em;
-    color: #738a94;
+    color: #73818c;
 }
 
 figcaption a {
@@ -351,7 +352,7 @@ figure blockquote p {
 }
 
 .site-subtitle {
-    color: #738a94;
+    color: #73818c;
     font-size: 13px;
     font-weight: 400;
     text-transform: none;
@@ -429,7 +430,7 @@ figure blockquote p {
 
 .post-meta,
 .view-online {
-    color: #738a94;
+    color: #73818c;
     font-size: 13px;
     font-weight: 400;
     text-align: center;
@@ -463,7 +464,7 @@ figure blockquote p {
 .view-online-link {
     word-wrap: none;
     white-space: nowrap;
-    color: #738a94;
+    color: #73818c;
     text-decoration: underline !important;
 }
 
@@ -491,7 +492,7 @@ figure blockquote p {
     padding-bottom: 32px;
     text-align: center;
     font-size: 13px !important;
-    color: #738a94;
+    color: #73818c;
     line-height: 1.5em;
 }
 
@@ -582,13 +583,13 @@ figure blockquote p {
 .latest-post p {
     margin: 0;
     padding: 0;
-    color: #738a94;
+    color: #73818c;
     font-size: 15px;
     font-weight: 400;
 }
 
 .latest-post p a {
-    color: #738a94 !important;
+    color: #73818c !important;
 }
 
 /* -------------------------------------
@@ -597,7 +598,7 @@ figure blockquote p {
 
 .subscription-box {
     padding: 32px 0;
-    border-bottom: 1px solid #e5eff5;
+    border-bottom: 1px solid #e0e7eb;
     color: #15212A;
 }
 
@@ -643,7 +644,7 @@ figure blockquote p {
     line-height: 1.5em;
     color: #15212A;
     padding-bottom: 20px;
-    border-bottom: 1px solid #e5eff5;
+    border-bottom: 1px solid #e0e7eb;
 }
 
 .post-content-sans-serif {
@@ -652,7 +653,7 @@ figure blockquote p {
     line-height: 1.5em;
     color: #15212A;
     padding-bottom: 20px;
-    border-bottom: 1px solid #e5eff5;
+    border-bottom: 1px solid #e0e7eb;
 }
 
 .post-content-row:first-child > td, .header-image-row + .post-content-row > td {
@@ -672,6 +673,10 @@ a[data-flickr-embed] img {
 /* Any card with altered visibility is wrapped in a div with the .kg-visibility-wrapper class */
 .kg-visibility-wrapper + * {
     margin-top: 1.5em !important;
+}
+
+.kg-visibility-wrapper + hr {
+    margin-top: 3em !important;
 }
 
 .kg-bookmark-card {
@@ -705,7 +710,7 @@ a[data-flickr-embed] img {
     font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
     text-decoration: none;
     border-radius: 3px;
-    border: 1px solid #e5eff5;
+    border: 1px solid #e0e7eb;
 }
 
 .kg-bookmark-content {
@@ -726,7 +731,7 @@ a[data-flickr-embed] img {
     overflow-y: hidden;
     margin-top: 12px;
     max-height: 40px;
-    color: #738a94;
+    color: #73818c;
     font-size: 13px;
     line-height: 1.5em;
     font-weight: 400;
@@ -919,19 +924,23 @@ a[data-flickr-embed] img {
     margin-top: 1.5em !important;
 }
 
+.kg-cta-card + hr {
+    margin-top: 3em !important;
+}
+
 .kg-cta-card.kg-cta-bg-none {
     padding: 0;
-    border-bottom: 1px solid #dddedf;
+    border-bottom: 1px solid #e0e7eb;
     border-radius: 0;
 }
 
 .kg-cta-bg-none.kg-cta-no-label {
-    border-top: 1px solid #dddedf;
+    border-top: 1px solid #e0e7eb;
 }
 
 .kg-cta-bg-white {
     background: #fff;
-    border: 1px solid #dddedf;
+    border: 1px solid #e0e7eb;
 }
 
 .kg-cta-bg-grey {
@@ -964,48 +973,56 @@ a[data-flickr-embed] img {
 
 .kg-cta-sponsor-label {
     padding: 12px 0;
+    border-bottom: 1px solid #e0e7eb;
+}
+
+.kg-cta-bg-none .kg-cta-sponsor-label {
+    padding-top: 0;
+}
+
+.kg-cta-immersive.kg-cta-has-img:not(.kg-cta-bg-none) .kg-cta-sponsor-label {
+    border-bottom: 0;
 }
 
 .kg-cta-bg-none .kg-cta-sponsor-label,
 .kg-cta-bg-white .kg-cta-sponsor-label {
-    border-bottom: 1px solid #dddedf;
+    border-color: #e0e7eb;
 }
 
 .kg-cta-bg-grey .kg-cta-sponsor-label {
-    border-bottom: 1px solid #d0d1d2;
+    border-color: #d0d1d2;
 }
 
 .kg-cta-bg-blue .kg-cta-sponsor-label {
-    border-bottom: 1px solid #cddee5;
+    border-color: #cddee5;
 }
 
 .kg-cta-bg-green .kg-cta-sponsor-label {
-    border-bottom: 1px solid #cce0ce;
+    border-color: #cce0ce;
 }
 
 .kg-cta-bg-yellow .kg-cta-sponsor-label {
-    color: #e3d9c4;
-    border-bottom: 1px solid #e3d9c4;
+    border-color: #e3d9c4;
 }
 
 .kg-cta-bg-red .kg-cta-sponsor-label {
-    border-bottom: 1px solid #e7d0d0;
+    border-color: #e7d0d0;
 }
 
 .kg-cta-bg-pink .kg-cta-sponsor-label {
-    border-bottom: 1px solid #e6d6e1;
+    border-color: #e6d6e1;
 }
 
 .kg-cta-bg-purple .kg-cta-sponsor-label {
-    border-bottom: 1px solid #dbd5e7;
+    border-color: #dbd5e7;
 }
 
 .kg-cta-sponsor-label p {
     margin: 0;
-    color: #738a94;
+    color: #89959f;
     font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 500;
     text-transform: uppercase;
 }
 
@@ -1039,6 +1056,10 @@ a[data-flickr-embed] img {
 
 table.kg-cta-content-wrapper {
     padding: 24px 0;
+}
+
+.kg-cta-immersive.kg-cta-has-img:not(.kg-cta-bg-none):not(.kg-cta-no-label) table.kg-cta-content-wrapper {
+    padding-top: 0;
 }
 
 .kg-cta-minimal .kg-cta-image-container {
@@ -1091,10 +1112,6 @@ img.kg-cta-image {
 
 .kg-cta-text p:last-child {
     margin-bottom: 0;
-}
-
-.kg-cta-immersive .kg-cta-text p {
-    text-align: center;
 }
 
 .kg-cta-button-container {
@@ -1309,7 +1326,7 @@ img.kg-cta-image {
     margin: 0 0 1.5em;
     padding: 20px;
     border-radius: 3px;
-    border: 1px solid #e5eff5;
+    border: 1px solid #e0e7eb;
 }
 .kg-product-card-image {
     width: 100%;
@@ -1323,7 +1340,7 @@ img.kg-cta-image {
     width: 100%;
     margin: 0 auto 1.5em;
     border-radius: 3px;
-    border: 1px solid #e5eff5;
+    border: 1px solid #e0e7eb;
 }
 .kg-audio-title {
     display: block;
@@ -1353,14 +1370,14 @@ img.kg-cta-image {
     color: #15171A !important;
 }
 .kg-audio-link {
-    color: #738a94 !important;
+    color: #73818c !important;
 }
 .kg-file-card {
     width: auto;
     width: 100%;
     margin: 0 0 1.5em 0;
     border-radius: 3px;
-    border: 1px solid #e5eff5;
+    border: 1px solid #e0e7eb;
 }
 .kg-file-title {
     display: block;
@@ -1381,7 +1398,7 @@ img.kg-cta-image {
     font-size: 15px;
     line-height: 1.4em;
     text-decoration: none !important;
-    color: #738a94 !important;
+    color: #73818c !important;
 }
 .kg-file-meta {
     display: block;
@@ -1392,7 +1409,7 @@ img.kg-cta-image {
     font-size: 13px;
     line-height: 1.4em;
     text-decoration: none !important;
-    color: #738a94 !important;
+    color: #73818c !important;
 }
 .kg-file-name {
     font-weight: 500;
@@ -1410,7 +1427,7 @@ img.kg-cta-image {
     width: 100%;
     margin: 0 auto;
     border-radius: 12px;
-    border: 1px solid #e5eff5;
+    border: 1px solid #e0e7eb;
 }
 
 .kg-toggle-card {
@@ -1418,7 +1435,7 @@ img.kg-cta-image {
     padding: 20px;
     margin-bottom: 1.5em;
     border-radius: 4px;
-    border: 1px solid #738a94;
+    border: 1px solid #73818c;
 }
 
 
@@ -1442,7 +1459,7 @@ img.kg-cta-image {
 }
 
 .footer {
-    color: #738a94;
+    color: #73818c;
     margin-top: 20px;
     text-align: center;
     font-size: 13px!important;
@@ -1454,7 +1471,7 @@ img.kg-cta-image {
 }
 
 .footer a {
-    color: #738a94;
+    color: #73818c;
     text-decoration: underline;
     font-size: 13px;
 }
@@ -1910,6 +1927,10 @@ img.kg-cta-image {
 
     table.body table.kg-cta-content-wrapper {
         padding: 20px 0;
+    }
+
+    table.body .kg-cta-immersive.kg-cta-has-img:not(.kg-cta-bg-none):not(.kg-cta-no-label) table.kg-cta-content-wrapper {
+        padding-top: 0;
     }
 
     table.body .kg-cta-minimal .kg-cta-image-container {
