--- a/ghost/admin/app/components/gh-nav-menu/main.hbs
+++ b/ghost/admin/app/components/gh-nav-menu/main.hbs
@@ -33,7 +33,7 @@
                 {{/if}}
                 {{#if (gh-user-can-admin this.session.user)}}
                     <li class="relative gh-nav-list-home">
-                        <LinkTo @route="dashboard" @alt="Dashboard" title="Dashboard" data-test-nav="dashboard">{{svg-jar
+                        <LinkTo @route="dashboard" @alt="Dashboard" data-test-nav="dashboard">{{svg-jar
                             "house"}} Dashboard</LinkTo>
                     </li>
                 {{/if}}
