Added Admin changes for super editors (#22453)
Ref https://github.com/TryGhost/Ghost/issues/22445

This PR has the admin section changes (and associated tests) for super
editors, including routing adjustments.

---------

Co-authored-by: Steve Larson <9larsons@gmail.com>

--- a/ghost/admin/app/components/gh-nav-menu/main.hbs
+++ b/ghost/admin/app/components/gh-nav-menu/main.hbs
@@ -134,7 +134,7 @@
                     </LinkTo>
                 </li>
                 {{/if}}
-                {{#if (gh-user-can-admin this.session.user)}}
+                {{#if (gh-user-can-manage-members this.session.user)}}
                 <li class="relative">
                     {{#if (eq this.router.currentRouteName "members.index")}}
                     <LinkTo @route="members" @current-when="members member member.new"
