--- a/ghost/core/core/frontend/src/cards/css/cta.css
+++ b/ghost/core/core/frontend/src/cards/css/cta.css
@@ -80,6 +80,10 @@
     color: currentColor;
 }
 
+.kg-cta-link-accent .kg-cta-sponsor-label a {
+    color: var(--ghost-accent-color);
+}
+
 .kg-cta-content {
     display: flex;
     padding: 1.5em;
@@ -173,6 +177,10 @@
 
 .kg-cta-text a {
     color: currentColor;
+}
+
+.kg-cta-link-accent .kg-cta-text a {
+    color: var(--ghost-accent-color);
 }
 
 a.kg-cta-button {
