--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -1054,6 +1054,10 @@ a[data-flickr-embed] img {
     color: #15212A;
 }
 
+.kg-cta-link-accent .kg-cta-sponsor-label a {
+    color: {{accentColor}} !important;
+}
+
 table.kg-cta-content-wrapper {
     padding: 24px 0;
 }
@@ -1099,6 +1103,10 @@ img.kg-cta-image {
 
 .kg-cta-text a {
     color: #15212A;
+}
+
+.kg-cta-link-accent .kg-cta-text a {
+    color: {{accentColor}} !important;
 }
 
 .post-content-sans-serif .kg-cta-text {
