feat: change add tags to edit tags

--- a/ghost/admin/app/components/posts-list/context-menu.hbs
+++ b/ghost/admin/app/components/posts-list/context-menu.hbs
@@ -46,8 +46,8 @@
     {{/if}}
 
     <li>
-        <button class="mr2" type="button" {{on "click" this.addTagToPosts}} data-test-button="add-tag">
-            <span>{{svg-jar "tag"}}Add a tag</span>
+        <button class="mr2" type="button" {{on "click" this.updatePostTags}} data-test-button="edit-tags">
+            <span>{{svg-jar "tag"}}Edit tags</span>
         </button>
     </li>
 
