Added frontend and email support for link colors in CTA cards (#22495)
ref https://linear.app/ghost/issue/PLG-377/add-link-color-setting

- adds CSS support for the updated CTA card rendering of link colors

--- a/ghost/core/core/frontend/src/cards/css/cta.css
+++ b/ghost/core/core/frontend/src/cards/css/cta.css
@@ -88,6 +88,10 @@
     opacity: 0.85;
 }
 
+.kg-cta-link-accent .kg-cta-sponsor-label a {
+    color: var(--ghost-accent-color);
+}
+
 .kg-cta-content {
     display: flex;
     padding: 1.5em;
@@ -187,6 +191,10 @@
 .kg-cta-text a:hover {
     color: currentColor;
     opacity: 0.85;
+}
+
+.kg-cta-link-accent .kg-cta-text a {
+    color: var(--ghost-accent-color);
 }
 
 a.kg-cta-button {
