Added frontend and email support for new alignment setting in CTA card
Ref https://linear.app/ghost/issue/PLG-379/add-center-alignment-as-a-setting
- A new alignment setting was added to the CTA card to support center alignment when the full-width layout is selected.
- As part of this, the button is now only full-width in the immersive layout when there is an image.

--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -1122,12 +1122,22 @@ img.kg-cta-image {
     margin-bottom: 0;
 }
 
+.kg-cta-immersive.kg-cta-centered .kg-cta-text p {
+    text-align: center;
+}
+
 .kg-cta-button-container {
     padding-top: 20px;
 }
 
-.kg-cta-minimal table.kg-cta-button-wrapper {
+.kg-cta-minimal table.kg-cta-button-wrapper,
+.kg-cta-immersive:not(.kg-cta-has-img) .kg-cta-button-container table {
     width: unset !important;
+}
+
+.kg-cta-immersive.kg-cta-centered .kg-cta-button-container table {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .kg-cta-minimal table.kg-cta-button-wrapper td {
