--- a/ghost/core/core/frontend/src/cards/css/cta.css
+++ b/ghost/core/core/frontend/src/cards/css/cta.css
@@ -151,6 +151,10 @@
     }
 }
 
+.kg-cta-centered .kg-cta-content-inner {
+    align-items: center;
+}
+
 .kg-cta-image-container {
     flex-shrink: 0;
 }
@@ -177,6 +181,10 @@
 .kg-cta-text p {
     margin: 0;
     text-wrap: pretty;
+}
+
+.kg-cta-immersive.kg-cta-centered .kg-cta-text {
+    text-align: center;
 }
 
 .kg-cta-text p + p {
@@ -221,11 +229,11 @@ a.kg-cta-button.kg-style-accent {
     background-color: var(--ghost-accent-color);
 }
 
-.kg-cta-minimal a.kg-cta-button {
+a.kg-cta-button {
     width: max-content;
 }
 
-.kg-cta-immersive a.kg-cta-button {
+.kg-cta-immersive.kg-cta-has-img a.kg-cta-button {
     width: 100%;
 }
 
