Adjusted line height for CTA card
No ref
- Both on web and in email, the line height followed the paragraph line height. This felt too loose for cards with a background so it's been adjusted. The line height for cards without a background has stayed the same, as it needs to feel inline with the paragraph line height.

--- a/ghost/core/core/frontend/src/cards/css/cta.css
+++ b/ghost/core/core/frontend/src/cards/css/cta.css
@@ -182,7 +182,12 @@
 
 .kg-cta-text p {
     margin: 0;
+    line-height: 1.5em;
     text-wrap: pretty;
+}
+
+.kg-cta-bg-none .kg-cta-text p {
+    line-height: unset;
 }
 
 .kg-cta-immersive.kg-cta-centered .kg-cta-text {
