--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -1116,10 +1116,15 @@ img.kg-cta-image {
 
 .kg-cta-text p {
     margin-bottom: 1em;
+    line-height: 1.4em;
 }
 
 .kg-cta-text p:last-child {
     margin-bottom: 0;
+}
+
+.kg-cta-bg-none:not(.kg-cta-minimal.kg-cta-has-img) .kg-cta-text p {
+    line-height: 1.6em;
 }
 
 .kg-cta-immersive.kg-cta-centered .kg-cta-text p {
@@ -1141,7 +1146,7 @@ img.kg-cta-image {
 }
 
 .kg-cta-minimal table.kg-cta-button-wrapper td {
-    padding: 6px 18px;
+    padding: 6px 18px 8px;
     border-radius: 6px;
 }
 
@@ -1150,7 +1155,7 @@ img.kg-cta-image {
 }
 
 .kg-cta-immersive .kg-cta-button-wrapper {
-    padding: 8px 20px;
+    padding: 8px 20px 9px;
     border-radius: 6px;
     text-align: center;
 }
@@ -1991,11 +1996,11 @@ img.kg-cta-image {
     }
 
     table.body .kg-cta-minimal table.kg-cta-button-wrapper td {
-        padding: 4px 16px;
+        padding: 4px 16px 5px;
     }
 
     table.body .kg-cta-immersive .kg-cta-button-wrapper {
-        padding: 6px 18px;
+        padding: 6px 18px 7px;
     }
 }
 
