--- a/ghost/admin/app/templates/stats.hbs
+++ b/ghost/admin/app/templates/stats.hbs
@@ -2,34 +2,38 @@
     <GhCanvasHeader class="gh-canvas-header gh-stats-header sticky break tablet post-header">
         <GhCustomViewTitle @title="Stats" />
         <div class="view-actions">
-            <button 
+            <button
                 type="button"
-                class="gh-btn {{if this.mockData "gh-btn-green"}}" 
-                data-test-button="toggle-data-mode" 
+                class="gh-btn {{if this.mockData "gh-btn-green"}}"
+                data-test-button="toggle-data-mode"
                 {{on "click" this.toggleMockData}}
             >
                 <span>{{if this.mockData "Using Test Data" "Using Live Data"}}</span>
             </button>
 
-            <Stats::Parts::AudienceFilter
-                @excludedAudiences={{this.excludedAudiences}}
-                @onChange={{this.onAudienceChange}}
-            />
+            <div>
+                <Stats::Parts::AudienceFilter
+                    @excludedAudiences={{this.excludedAudiences}}
+                    @onChange={{this.onAudienceChange}}
+                />
+            </div>
 
-            <PowerSelect
-                @selected={{this.selectedRangeOption}}
-                @options={{this.rangeOptions}}
-                @searchEnabled={{false}}
-                @onChange={{this.onRangeChange}}
-                @triggerComponent={{component "gh-power-select/trigger"}}
-                @triggerClass="gh-btn"
-                @dropdownClass="gh-contentfilter-menu-dropdown is-narrow"
-                @matchTriggerWidth={{false}}
-                @horizontalPosition="right"
-                as |option|
-            >
-                {{#if option.name}}{{option.name}}{{else}}<span class="red">Unknown option</span>{{/if}}
-            </PowerSelect>
+            <div>
+                <PowerSelect
+                    @selected={{this.selectedRangeOption}}
+                    @options={{this.rangeOptions}}
+                    @searchEnabled={{false}}
+                    @onChange={{this.onRangeChange}}
+                    @triggerComponent={{component "gh-power-select/trigger"}}
+                    @triggerClass="gh-btn"
+                    @dropdownClass="gh-contentfilter-menu-dropdown is-narrow"
+                    @matchTriggerWidth={{false}}
+                    @horizontalPosition="right"
+                    as |option|
+                >
+                    {{#if option.name}}{{option.name}}{{else}}<span class="red">Unknown option</span>{{/if}}
+                </PowerSelect>
+            </div>
         </div>
 
         {{#if (or this.device this.browser this.location this.source this.pathname)}}
