--- a/ghost/admin/app/styles/layouts/stats.css
+++ b/ghost/admin/app/styles/layouts/stats.css
@@ -233,6 +233,25 @@
 
 .gh-stats-data-label {
     color: var(--black);
+    display: flex;
+    gap: 6px;
+    align-items: center;
+}
+
+.gh-stats-external-link {
+    color: var(--black);
+    line-height: 1;
+    opacity: 0;
+    transition: all ease-in-out 0.15s;
+}
+
+.gh-stats-data-label:hover .gh-stats-external-link {
+    opacity: 1;
+}
+
+.gh-stats-external-link svg {
+    width: 13px;
+    height: auto;
 }
 
 a.gh-stats-data-label:hover {
@@ -275,7 +294,7 @@ a.gh-stats-data-label:hover {
     margin-top: -20px;
 }
 
-.gh-stats-domain {
+.gh-stats-bar-text {
     display: flex;
     align-items: center;
     gap: 6px;
@@ -283,7 +302,7 @@ a.gh-stats-data-label:hover {
     line-height: 1.3em;
 }
 
-.gh-stats-domain:hover span {
+.gh-stats-bar-text:hover span {
     text-decoration: underline;
 }
 
@@ -292,10 +311,10 @@ a.gh-stats-data-label:hover {
     height: 16px;
 }
 
-.gh-stats-domain span {
+.gh-stats-bar-text span {
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     overflow: hidden;
 }
 
@@ -412,6 +431,13 @@ a.gh-stats-data-label:hover {
 .gh-stats-audience-filter-btn-label {
     padding: 0 !important;
     margin: 0 !important;
+}
+
+.gh-stats-data-label .gh-stats-bar-truncate {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
 }
 
 @media (max-width: 1440px) {
