--- a/ghost/admin/app/components/stats/kpis-overview.hbs
+++ b/ghost/admin/app/components/stats/kpis-overview.hbs
@@ -1,5 +1,5 @@
 
-<div class="gh-stats-tabs-header" {{did-update this.fetchDataIfNeeded @chartRange @audience @device @browser @location @source @pathname @mockData}}>
+<div class="gh-stats-tabs-header" {{did-update this.fetchDataIfNeeded @chartRange @audience @device @browser @location @source @pathname @os @mockData}}>
     <div class="gh-stats-tabs">
         <button type="button" class="gh-stats-tab min-width {{if this.uniqueVisitsTabSelected 'is-selected'}}" {{on "click" this.changeTabToUniqueVisits}}>
             <Stats::Parts::Metric
@@ -53,6 +53,7 @@
         @location={{@location}}
         @source={{@source}}
         @pathname={{@pathname}}
+        @os={{@os}}
         @selected={{this.selected}}
         @mockData={{@mockData}}
     />
