Fixed button alignment of CTA card in minimal layout
Ref https://linear.app/ghost/issue/PLG-380/fix-button-alignment-for-minimal-layout

--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -1059,7 +1059,7 @@ a[data-flickr-embed] img {
 }
 
 table.kg-cta-content-wrapper {
-    padding: 24px 0;
+    padding: 24px 0 26px;
 }
 
 .kg-cta-immersive.kg-cta-has-img:not(.kg-cta-bg-none):not(.kg-cta-no-label) table.kg-cta-content-wrapper {
