--- a/ghost/core/core/frontend/src/cards/css/cta.css
+++ b/ghost/core/core/frontend/src/cards/css/cta.css
@@ -95,7 +95,7 @@
 .kg-cta-content {
     display: flex;
     padding: 1.5em;
-    gap: 1.5em;
+    gap: 1.5em 1.5em 1.7em;
 }
 
 @media (max-width: 600px) {
@@ -151,7 +151,7 @@
     }
 }
 
-.kg-cta-centered .kg-cta-content-inner {
+.kg-cta-immersive.kg-cta-centered .kg-cta-content-inner {
     align-items: center;
 }
 
