--- a/ghost/admin/app/templates/stats.hbs
+++ b/ghost/admin/app/templates/stats.hbs
@@ -95,6 +95,7 @@
                 @pathname={{this.pathname}}
                 @os={{this.os}}
                 @mockData={{this.mockData}}
+                @onTotalsChange={{this.onTotalsChange}}
             />
         </section>
 
