Added Stats React app
ref ANAL-157

- ATM traffic analytics is a combination of Ember and React components. This PR creates a new "Stats" React app that uses Shade

--- a/ghost/admin/app/components/gh-nav-menu/main.hbs
+++ b/ghost/admin/app/components/gh-nav-menu/main.hbs
@@ -175,6 +175,11 @@
                     <LinkTo @route="posts-x" @current-when="posts-x">{{svg-jar "chart"}}Post analytics</LinkTo>
                 </li>
                 {{/if}}
+                {{#if (and (gh-user-can-admin this.session.user) this.config.stats (feature "statsX"))}}
+                    <li class="relative">
+                        <LinkTo @route="stats-x">{{svg-jar "stats-outline"}}Stats X</LinkTo>
+                    </li>
+                {{/if}}
             </ul>
 
             {{#if this.session.user.isOwnerOnly}}
