Enabled ActivityPub menu for Admin users
ref https://linear.app/ghost/issue/AP-985/display-ap-views-for-both-owners-and-admins

- ActivityPub is now available to Owner and Admin staff users

--- a/ghost/admin/app/components/gh-nav-menu/main.hbs
+++ b/ghost/admin/app/components/gh-nav-menu/main.hbs
@@ -26,7 +26,7 @@
         {{#unless this.session.user.isContributor}}
         <div class="gh-nav-top">
             <ul class="gh-nav-list gh-nav-main">
-                {{#if (and (feature "ActivityPub") this.session.user.isOwnerOnly)}}
+                {{#if (and (feature "ActivityPub") this.session.user.isAdmin)}}
                     <li>
                         <LinkTo @route="activitypub-x" @current-when="activitypub-x">{{svg-jar "house"}}Home</LinkTo>
                     </li>
@@ -34,7 +34,7 @@
                 {{#if (gh-user-can-admin this.session.user)}}
                     <li class="relative gh-nav-list-home">
                         <LinkTo @route="dashboard" @alt="Dashboard" data-test-nav="dashboard">
-                            {{#if (and (feature "ActivityPub") this.session.user.isOwnerOnly)}}
+                            {{#if (and (feature "ActivityPub") this.session.user.isAdmin)}}
                                 {{svg-jar "gauge"}}
                             {{else}}
                                 {{svg-jar "house"}}
@@ -61,7 +61,7 @@
                     </li>
                 {{/if}}
                 {{#if (gh-user-can-admin this.session.user)}}
-                    {{#if (not (and (feature "ActivityPub") this.session.user.isOwnerOnly))}}
+                    {{#if (not (and (feature "ActivityPub") this.session.user.isAdmin))}}
                         <li class="relative">
                             <a href="javascript:void(0)" class={{if this.explore.exploreWindowOpen "active" }} {{on "click" (fn
                                 this.toggleExploreWindow "" )}} data-test-nav="explore">
