--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -868,7 +868,7 @@ a[data-flickr-embed] img {
 }
 
 .kg-callout-card-grey {
-    background: #eef0f2;
+    background: #f1f2f4;
 }
 
 .kg-callout-card-white {
@@ -944,7 +944,7 @@ a[data-flickr-embed] img {
 }
 
 .kg-cta-bg-grey {
-    background: #eef0f2;
+    background: #f1f2f4;
 }
 
 .kg-cta-bg-blue {
