--- a/ghost/admin/app/components/editor/modals/preview/email.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email.hbs
@@ -48,7 +48,7 @@
                                         aria-invalid={{if this.sendPreviewEmailError "true"}}
                                         aria-describedby={{if this.sendPreviewEmailError "sendError"}}
                                         data-post-preview-email-input
-                                        autofocus="true"
+                                        {{autofocus}}
                                         {{on-key "Enter" (perform this.sendPreviewEmailTask)}}
                                     />
                                     <p class="description">You'll receive this as a free member.</p>
