--- a/ghost/admin/app/components/editor/modals/update-flow.hbs
+++ b/ghost/admin/app/components/editor/modals/update-flow.hbs
@@ -1,18 +1,16 @@
-<div class="flex flex-column h-100 items-center overflow-auto" data-test-modal="update-flow">
-    <header class="gh-publish-header">
-        <h2>{{if post.isScheduled "Unschedule" "Unpublish"}}</h2>>
-        <div class="flex">
-            {{#let @data.publishOptions.post as |post|}}
+{{#let @data.publishOptions.post as |post|}}
+    <div class="flex flex-column h-100 items-center overflow-auto" data-test-modal="update-flow">
+        <header class="gh-publish-header">
+            <h2>{{if post.isScheduled "Unschedule" "Unpublish"}}</h2>
+            <div class="flex">
                 {{#if (not (and post.isSent (not post.isPublished)))}}
                     <button class="gh-btn" title="Close" type="button" {{on "click" @close}}>
                         <span>Close</span>
                     </button>
                 {{/if}}
-            {{/let}}
-        </div>
-    </header>
+            </div>
+        </header>
 
-    {{#let @data.publishOptions.post as |post|}}
         <div class="gh-publish-settings-container gh-update-flow fade-in">
             <div class="gh-publish-title" data-test-update-flow-title>
                 {{#if (and post.isSent (not post.isPublished))}}
@@ -104,5 +102,5 @@
                 </p>
             </div>
         </div>
-    {{/let}}
-</div>
+    </div>
+{{/let}}
