--- a/ghost/admin/app/components/editor/modals/preview/email.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email.hbs
@@ -14,10 +14,11 @@
                                 @triggerClass="gh-preview-newsletter-trigger gh-input-x"
                                 @dropdownClass="gh-dropdown-x gh-publish-newsletter-dropdown gh-preview-newsletter-dropdown"
                                 @selectedItemComponent={{component "editor/modals/preview/selected-newsletter-label"}}
+                                @matchTriggerWidth={{false}}
                                 data-test-email-preview-newsletter-select
                                 as |option|
                             >
-                                <span>{{option.name}}</span>
+                                <span>{{option.name}} {{concat "<" (sender-email-address this.newsletter.senderEmail) ">"}}</span>
                             </PowerSelect>
                         {{else}}
                             <p class="gh-preview-newsletter-name">{{this.newsletter.name}} <span
