--- a/ghost/admin/app/styles/layouts/preview-email.css
+++ b/ghost/admin/app/styles/layouts/preview-email.css
@@ -151,8 +151,9 @@ p .gh-preview-email-address {
 .gh-preview-email-subject {
     display: flex;
     align-items: center;
-    color: var(--darkgrey);
-    font-weight: 600;
+    color: var(--black);
+    font-size: 1.4rem;
+    font-weight: 400;
     cursor: pointer;
 }
 
@@ -180,13 +181,15 @@ p .gh-preview-email-address {
 }
 
 .gh-preview-email-subject-input {
+    width: 100%;
     height: 25px;
     border: 0;
     border-radius: 0;
     background: transparent;
     padding: 0;
+    color: var(--black);
     font-size: 1.4rem;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 1.8em;
 }
 
@@ -198,6 +201,7 @@ p .gh-preview-email-address {
 .gh-email-subject {
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .gh-pe-emailclient-sender span.strong {
