--- a/ghost/admin/app/components/editor/modals/preview/browser.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/browser.hbs
@@ -1,5 +1,5 @@
 <div class="gh-post-preview-container gh-post-preview-browser-container {{unless @skipAnimation "fade-in"}}">
     <div class="gh-browserpreview-iframecontainer">
-        <iframe class="gh-pe-iframe" src={{@post.previewUrl}} title="Desktop browser post preview"></iframe>
+        <iframe class="gh-pe-iframe" src={{@previewUrl}} title="Desktop browser post preview"></iframe>
     </div>
 </div>
