Replaced external icon with copy icon in post preview
Ref https://linear.app/ghost/issue/PLG-348/wire-up-the-post-preview-modal-functionalities

--- a/ghost/admin/app/components/editor/modals/preview.hbs
+++ b/ghost/admin/app/components/editor/modals/preview.hbs
@@ -50,7 +50,7 @@
                     <div class="gh-post-preview-share">
                         <GhTaskButton
                             @task={{this.copyPreviewUrlTask}}
-                            @idleIcon="external"
+                            @idleIcon="copy"
                             @buttonText="Copy draft link"
                             @runningText="Copy draft link"
                             @successText="Copied"
