--- a/ghost/admin/app/components/editor/modals/preview/browser.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/browser.hbs
@@ -1,5 +1,15 @@
-<div class="gh-post-preview-container gh-post-preview-browser-container {{unless @skipAnimation "fade-in"}}">
-    <div class="gh-browserpreview-iframecontainer">
-        <iframe class="gh-pe-iframe" src={{@previewUrl}} title="Desktop browser post preview"></iframe>
+{{#if @mobile}}
+    <div class="modal-body modal-preview-email-content gh-pe-mobile-container gh-post-preview-container h-auto overflow-auto {{unless @skipAnimation "fade-in"}}">
+        <div class="gh-pe-mobile-bezel">
+            <div class="gh-pe-mobile-screen">
+                <iframe class="gh-post-preview-iframe" src={{@previewUrl}} title="Mobile browser post preview"></iframe>
+            </div>
+        </div>
     </div>
-</div>
+{{else}}
+    <div class="gh-post-preview-container gh-post-preview-browser-container {{unless @skipAnimation "fade-in"}}">
+        <div class="gh-browserpreview-iframecontainer">
+            <iframe class="gh-pe-iframe" src={{@previewUrl}} title="Desktop browser post preview"></iframe>
+        </div>
+    </div>
+{{/if}}
