--- a/ghost/admin/app/components/editor/modals/preview/email.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email.hbs
@@ -1,8 +1,5 @@
-<div
-    class="gh-post-preview-container gh-post-preview-email-container {{unless @skipAnimation "fade-in"}}"
-    {{did-update this.rerenderEmailPreview @memberSegment}}
->
-    <div class="gh-post-preview-email-mockup">
+<div class="gh-post-preview-container gh-post-preview-email-container {{unless @skipAnimation "fade-in"}}">
+    <div class="gh-post-preview-email-mockup {{if @mobile "gh-post-preview-email-mockup-mobile"}}">
         <div class="gh-post-preview-email-header">
             <div class="gh-post-preview-email-columns">
                 <div class="gh-post-preview-email-group">
@@ -89,7 +86,12 @@
                 />
             </form>
         </div>
-        <iframe class="gh-pe-iframe" {{did-insert this.renderEmailPreview}} title="Email preview"
-                sandbox="allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+        <iframe
+            class="gh-pe-iframe"
+            title="Email preview"
+            sandbox="allow-same-origin allow-popups allow-popups-to-escape-sandbox"
+            {{did-insert this.renderEmailPreview}}
+            {{did-update this.renderEmailPreview @memberSegment}}
+        ></iframe>
     </div>
 </div>
