Hooked up help text for sending test emails
Ref https://linear.app/ghost/issue/PLG-348/wire-up-the-post-preview-modal-functionalities

--- a/ghost/admin/app/components/editor/modals/preview/email.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email.hbs
@@ -55,7 +55,7 @@
                                             {{autofocus}}
                                             {{on-key "Enter" (perform this.sendPreviewEmailTask)}}
                                         />
-                                        <p class="description">You'll receive this as a free member.</p>
+                                        <p class="description">You'll receive this as a {{@memberSegment}} member.</p>
                                         <GhTaskButton
                                             @task={{this.sendPreviewEmailTask}}
                                             @buttonText="Send"
