Updated Profile feed routes

--- a/apps/admin-x-activitypub/src/styles/index.css
+++ b/apps/admin-x-activitypub/src/styles/index.css
@@ -74,7 +74,7 @@ button.ap-action-button:active svg {
 }
 
 .ap-red-heart path {
-    fill: #F50B23;
+    fill: #fb2d8d;
 }
 
 /* Note and profile content */
