fixed email subject changes from preview modal

--- a/ghost/admin/app/components/editor/modals/preview.hbs
+++ b/ghost/admin/app/components/editor/modals/preview.hbs
@@ -107,7 +107,7 @@
                     @memberSegment={{this.previewAsSegment}}
                     @newsletter={{@data.publishOptions.newsletter}}
                     @skipAnimation={{this.skipAnimation}}
-                    @savePostTask={{@data.savePostTask}}
+                    @savePostTask={{@data.saveTask}}
                     @mobile={{eq this.previewSize "mobile"}}
                 />
             {{/if}}
