Improved email preview for mobile
Ref https://linear.app/ghost/issue/PLG-348/wire-up-the-post-preview-modal-functionalities
- Changed subject input to be read-only text on mobile preview
- Removed email address from mobile preview
- Removed accidental fill on "view site" external icon in main nav

--- a/ghost/admin/app/components/editor/modals/preview/email/email-subject.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email/email-subject.hbs
@@ -1,13 +1,17 @@
 <div class="gh-email-subject">
-    <input
-        aria-label="Email subject"
-        type="text"
-        class="gh-input gh-input-x"
-        placeholder={{truncate @post.title 40}}
-        value={{this.subject}}
-        {{on "blur" this.setSubject}}
-        {{on-key "Enter" this.setSubject}}
-    />
+    {{#if @mobile}}
+        <p class="gh-preview-email-subject-text">{{this.subject}}</p>
+    {{else}}
+        <input
+            aria-label="Email subject"
+            type="text"
+            class="gh-input gh-input-x"
+            placeholder={{truncate @post.title 40}}
+            value={{this.subject}}
+            {{on "blur" this.setSubject}}
+            {{on-key "Enter" this.setSubject}}
+        />
+    {{/if}}
 
     <div class="error">
         <GhErrorMessage @errors={{@post.errors}} @property="emailSubject" />
