--- a/ghost/admin/app/components/editor/modals/preview/email.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email.hbs
@@ -1,7 +1,7 @@
 <div class="gh-post-preview-container gh-post-preview-email-container {{if @mobile "gh-pe-mobile-container"}} {{unless @skipAnimation "fade-in"}}">
     <div class="gh-post-preview-email {{if @mobile "gh-pe-mobile-bezel"}}">
         <div class="gh-post-preview-email-mockup {{if @mobile "gh-post-preview-email-mockup-mobile gh-pe-mobile-screen"}}">
-            <div class="gh-post-preview-email-header">
+            <div class="gh-post-preview-email-header {{if (gt this.newslettersList.length 1) "gh-post-preview-multiple-newsletters"}}">
                 <div class="gh-post-preview-email-columns">
                     <div class="gh-post-preview-email-group">
                         <form class="gh-email-preview-newsletter-select" data-test-email-preview-newsletter-select-section>
@@ -84,6 +84,7 @@
                     <Editor::Modals::Preview::Email::EmailSubject
                         @post={{@post}}
                         @savePostTask={{@savePostTask}}
+                        @mobile={{@mobile}}
                     />
                 </form>
             </div>
